# UpdateStateList

./: .gitignore  LICENSE  README.md  pyproject.toml  sonar-project.properties
data/: virginiaStateListDec2025.csv
junit/: test-results.xml
tests/: test_generate_docx.py  test_generate_html.py  test_get_ebird_api_key.py  test_get_taxonomy.py  test_parse_common_arguments.py  test_update_state_list.py
tests/resources/: test.csv  test_updated.csv
update_state_list/: generate_docx.py  generate_html.py  get_ebird_api_key.py  get_taxonomy.py  parse_common_arguments.py  update_state_list.py
